WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221523
REGRESSION(
r272379
) [WPE] imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant tests are Image Failing
https://bugs.webkit.org/show_bug.cgi?id=221523
Summary
REGRESSION(r272379) [WPE] imported/w3c/web-platform-tests/mathml/relations/cs...
Lauro Moura
Reported
2021-02-06 17:59:17 PST
imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-bold-fraktur.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-bold-italic.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-bold-sans-serif.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-bold-script.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-bold.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-double-struck.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-fraktur.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-initial.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-italic.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-looped.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-monospace.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-sans-serif-bold-italic.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-sans-serif-italic.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-sans-serif.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-script.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-stretched.html imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant-tailed.html In the tests listed above, the 0 glyph is always drawn. Changing the guard added by
r272379
to `#if (!PLATFORM(COCOA) && !USE(GLIB)) || USE(CTFONTSHAPEGLYPHS)` seems to fix the issue, although the original test added (fast/text/multi-code-unit-simple-path.html) keeps failing for GTK/WPE. It keeps telling a reference mismatch did not happen, despite the test on Minibrowser showing the char box.
Attachments
Tentative fix
(5.52 KB, patch)
2021-02-06 18:12 PST
,
Lauro Moura
aperez
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2021-02-06 18:12:51 PST
Created
attachment 419517
[details]
Tentative fix
EWS
Comment 2
2021-02-07 04:57:17 PST
commit-queue failed to commit
attachment 419517
[details]
to WebKit repository. To retry, please set cq+ flag again.
Lauro Moura
Comment 3
2021-02-07 20:18:10 PST
Committed
r272479
: <
https://trac.webkit.org/changeset/272479
>
Radar WebKit Bug Importer
Comment 4
2021-02-07 20:19:13 PST
<
rdar://problem/74082393
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug