REGRESSION(r272379) [WPE] imported/w3c/web-platform-tests/mathml/relations/css-styling/mathvariant tests are Image Failing https://bugs.webkit.org/show_bug.cgi?id=221523

Reviewed by Adrian Perez de Castro.

Source/WebCore:

Covered by existing tests.

This change makes the mathml tests pass again, but still does not
fixes fast/text/multi-code-unit-simple-path.html, which is still not
mismatching on both GTK/WPE.

* platform/graphics/WidthIterator.cpp:
(WebCore::WidthIterator::advanceInternal): Avoid inserting the
trailing zero for GLIB.

LayoutTests:

* platform/wpe/TestExpectations: Remove expected failures

Canonical link: https://commits.webkit.org/233793@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272479 268f45cc-cd09-0410-ab3c-d52691b4dbfc